still trying to fix about-me margin issue on mobile

--- a/style.css
+++ b/style.css
@@ -118,12 +118,12 @@ a:hover {
     }
     
     .about-me {
-        margin-right: 9vw;
-        margin-left: 9vw;
+        margin-right: 5vw;
+        margin-left: 5vw;
     }
     
     .links {
-        bottom: 4vw;
+        bottom: 3vw;
     }
 }
 
